--- a/index.html
+++ b/index.html
@@ -28,18 +28,35 @@
       scroll-behavior: smooth;
     }
 
+    /* Animations */
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
     /* Header / Hero */
     header {
       background: linear-gradient(135deg, #2563eb, #1e40af);
       color: #fff;
       padding: 80px 20px;
       text-align: center;
+      animation: fadeIn 1.2s ease forwards;
+    }
+
+    header img {
+      animation: fadeUp 1s ease forwards;
     }
 
     header h1 {
-      margin: 0;
+      margin: 20px 0 0;
       font-size: 3rem;
       font-weight: 700;
+      animation: fadeUp 1.2s ease forwards;
     }
 
     header p {
@@ -47,6 +64,7 @@
       max-width: 700px;
       font-size: 1.2rem;
       opacity: 0.95;
+      animation: fadeUp 1.4s ease forwards;
     }
 
     .btn {
@@ -57,12 +75,14 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: 600;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+      animation: fadeUp 1.6s ease forwards;
     }
 
     .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+      transform: translateY(-4px) scale(1.03);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+      background: #e0e7ff;
     }
 
     /* Navigation */
@@ -73,6 +93,7 @@
       padding: 12px 10px;
       text-align: center;
       z-index: 1000;
+      animation: fadeIn 1s ease forwards;
     }
 
     nav a {
@@ -80,10 +101,12 @@
       margin: 0 14px;
       text-decoration: none;
       font-weight: 500;
+      transition: color 0.3s ease, transform 0.3s ease;
     }
 
     nav a:hover {
       color: #93c5fd;
+      transform: translateY(-2px);
     }
 
     /* Sections */
@@ -91,6 +114,7 @@
       padding: 70px 20px;
       max-width: 1100px;
       margin: auto;
+      animation: fadeUp 1s ease forwards;
     }
 
     h2 {
@@ -107,6 +131,7 @@
       display: block;
       margin-top: 10px;
       border-radius: 2px;
+      animation: fadeIn 1.5s ease forwards;
     }
 
     /* Cards */
@@ -116,11 +141,12 @@
       border-radius: 14px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.06);
       margin-bottom: 25px;
-      transition: transform 0.2s ease;
+      transition: transform 0.35s ease, box-shadow 0.35s ease;
     }
 
     .card:hover {
-      transform: translateY(-4px);
+      transform: translateY(-8px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.12);
     }
 
     /* Skills */
@@ -137,12 +163,12 @@
       font-weight: 500;
       color: #1e3a8a;
       text-align: center;
+      transition: transform 0.3s ease, background 0.3s ease;
     }
 
-    /* Experience */
-    .experience-grid {
-      display: grid;
-      gap: 25px;
+    .skills span:hover {
+      transform: scale(1.05);
+      background: #dbeafe;
     }
 
     /* Projects */
@@ -152,12 +178,6 @@
       gap: 25px;
     }
 
-    /* Contact */
-    #contact p {
-      font-size: 1.05rem;
-      color: var(--muted);
-    }
-
     /* Footer */
     footer {
       background: var(--dark);
@@ -165,6 +185,7 @@
       text-align: center;
       padding: 30px 20px;
       font-size: 0.9rem;
+      animation: fadeIn 1.2s ease forwards;
     }
 
     @media (max-width: 600px) {
@@ -263,11 +284,13 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <strong>your-email@example.com</strong></p>
+  <p>Email: <strong>zondienkhana@gmail.com</strong></p>
   <p>Phone: <strong>+265 882 870 849</strong></p>
   <p>Location: Malawi</p>
   <p>
-    <a class="btn" href="https://github.com/yourusername" target="_blank">GitHub Profile</a>
+    <a class="btn" href="https://github.com/zondie-nkhana" target="_blank">GitHub</a>
+    <a class="btn" href="https://www.linkedin.com/in/zondie-nkhana" target="_blank" style="margin-left:10px;">LinkedIn</a>
+    <a class="btn" href="https://wa.me/265882870849" target="_blank" style="margin-left:10px;">WhatsApp</a>
     <a class="btn" href="cv.pdf" style="margin-left:10px;" download>Download CV</a>
   </p>
 </section>
