--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     /* Sections */
     section {
-      padding: 70px 20px;
+      padding: 40px 20px; /* reduced vertical spacing */
       max-width: 1100px;
       margin: auto;
       animation: fadeUp 1s ease forwards;
@@ -198,8 +198,8 @@
 
 <header>
   <img src="profile.jpg" alt="Zondie Nkhana" style="width:160px;height:160px;border-radius:50%;border:5px solid rgba(255,255,255,0.7);margin-bottom:20px;object-fit:cover;" />
-  <h1>Zondie Nkhana</h1>
-  <p>ICT Educator • Computer Studies & Mathematics Teacher • ICT Support Specialist</p>
+  <h1>ZONDIE NKHANA</h1>
+  <p>ICT Educator • Website & Systemes Developer • ICT Support Specialist</p>
   <a class="btn" href="#contact">Get in Touch</a>
   <a class="btn" href="cv.pdf" style="margin-left:10px;" download>Download CV</a>
 </header>
@@ -288,7 +288,7 @@
   <p>Phone: <strong>+265 882 870 849</strong></p>
   <p>Location: Malawi</p>
   <p>
-    <a class="btn" href="https://github.com/zondie-nkhana" target="_blank">GitHub</a>
+    <a class="btn" href="https://github.com/Zondie-Nkhana" target="_blank">GitHub</a>
     <a class="btn" href="https://www.linkedin.com/in/zondie-nkhana" target="_blank" style="margin-left:10px;">LinkedIn</a>
     <a class="btn" href="https://wa.me/265882870849" target="_blank" style="margin-left:10px;">WhatsApp</a>
     <a class="btn" href="cv.pdf" style="margin-left:10px;" download>Download CV</a>
