--- a/index.html
+++ b/index.html
@@ -288,30 +288,33 @@
   <p>Phone: <strong>+265 882 870 849</strong></p>
   <p>Location: Malawi</p>
   <p>
-    <a class="btn" href="https://github.com/Zondie-Nkhana" target="_blank" aria-label="GitHub">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 .5C5.73.5.5 5.73.5 12c0 5.1 3.29 9.43 7.86 10.96.58.1.79-.25.79-.56v-2.02c-3.2.7-3.88-1.54-3.88-1.54-.52-1.32-1.27-1.67-1.27-1.67-1.04-.71.08-.7.08-.7 1.15.08 1.75 1.18 1.75 1.18 1.02 1.75 2.67 1.25 3.32.96.1-.74.4-1.25.72-1.54-2.55-.29-5.23-1.27-5.23-5.66 0-1.25.45-2.27 1.18-3.07-.12-.29-.51-1.46.11-3.05 0 0 .97-.31 3.18 1.17a11.1 11.1 0 0 1 5.8 0c2.21-1.48 3.18-1.17 3.18-1.17.62 1.59.23 2.76.11 3.05.73.8 1.18 1.82 1.18 3.07 0 4.4-2.69 5.37-5.25 5.65.41.36.78 1.07.78 2.16v3.2c0 .31.21.67.8.56A11.52 11.52 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5z"/>
-      </svg>
-    </a>
+    <a class="btn" href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<path d="M12 .5C5.73.5.5 5.73.5 12c0 5.1 3.29 9.43 7.86 10.96.58.1.79-.25.79-.56v-2.02c-3.2.7-3.88-1.54-3.88-1.54-.52-1.32-1.27-1.67-1.27-1.67-1.04-.71.08-.7.08-.7 1.15.08 1.75 1.18 1.75 1.18 1.02 1.75 2.67 1.25 3.32.96.1-.74.4-1.25.72-1.54-2.55-.29-5.23-1.27-5.23-5.66 0-1.25.45-2.27 1.18-3.07-.12-.29-.51-1.46.11-3.05 0 0 .97-.31 3.18 1.17a11.1 11.1 0 0 1 5.8 0c2.21-1.48 3.18-1.17 3.18-1.17.62 1.59.23 2.76.11 3.05.73.8 1.18 1.82 1.18 3.07 0 4.4-2.69 5.37-5.25 5.65.41.36.78 1.07.78 2.16v3.2c0 .31.21.67.8.56A11.52 11.52 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5z"/>
+</svg>
+</a>
 
-    <a class="btn" href="https://www.linkedin.com/in/zondie-nkhana" target="_blank" aria-label="LinkedIn" style="margin-left:10px;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path d="M4.98 3.5C3.33 3.5 2 4.84 2 6.48c0 1.63 1.32 2.98 2.95 2.98h.03c1.66 0 2.99-1.35 2.99-2.98C7.97 4.84 6.64 3.5 4.98 3.5zM2.4 21.5h5.17V9.98H2.4V21.5zM9.34 9.98h4.96v1.57h.07c.69-1.3 2.38-2.67 4.9-2.67 5.24 0 6.21 3.45 6.21 7.94v4.68h-5.17v-4.15c0-.99-.02-2.26-1.38-2.26-1.38 0-1.59 1.08-1.59 2.19v4.22H9.34V9.98z"/>
-      </svg>
-    </a>
 
-    <a class="btn" href="https://wa.me/265882870849" target="_blank" aria-label="WhatsApp" style="margin-left:10px;">
-      <svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path d="M16 2.67C8.64 2.67 2.67 8.64 2.67 16c0 2.35.61 4.55 1.68 6.47L2 30l7.71-2.02A13.2 13.2 0 0 0 16 29.33C23.36 29.33 29.33 23.36 29.33 16S23.36 2.67 16 2.67zm0 24.13c-2.03 0-3.92-.55-5.55-1.5l-.4-.23-4.58 1.2 1.22-4.46-.26-.43a10.8 10.8 0 0 1-1.63-5.78c0-6.01 4.89-10.9 10.9-10.9 6.01 0 10.9 4.89 10.9 10.9 0 6.01-4.89 10.9-10.9 10.9zm6.01-8.18c-.33-.16-1.96-.97-2.27-1.08-.31-.12-.54-.16-.77.16-.23.33-.88 1.08-1.08 1.31-.2.23-.39.26-.72.1-.33-.16-1.4-.52-2.67-1.65-.99-.88-1.66-1.96-1.86-2.29-.2-.33-.02-.51.14-.67.14-.14.33-.39.49-.59.16-.2.2-.33.33-.55.12-.23.06-.43-.03-.59-.1-.16-.77-1.86-1.06-2.55-.28-.67-.56-.58-.77-.59h-.66c-.23 0-.59.08-.9.43-.31.33-1.18 1.15-1.18 2.81s1.21 3.26 1.38 3.49c.16.23 2.38 3.63 5.77 5.09.81.35 1.44.56 1.93.72.81.26 1.55.22 2.13.14.65-.1 1.96-.8 2.24-1.57.28-.77.28-1.43.2-1.57-.08-.14-.31-.23-.64-.39z"/>
-      </svg>
-    </a>
+<a class="btn" href="https://www.linkedin.com/in/your-linkedin" target="_blank" aria-label="LinkedIn" style="margin-left:10px;">
+<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<path d="M4.98 3.5C3.33 3.5 2 4.84 2 6.48c0 1.63 1.32 2.98 2.95 2.98h.03c1.66 0 2.99-1.35 2.99-2.98C7.97 4.84 6.64 3.5 4.98 3.5zM2.4 21.5h5.17V9.98H2.4V21.5zM9.34 9.98h4.96v1.57h.07c.69-1.3 2.38-2.67 4.9-2.67 5.24 0 6.21 3.45 6.21 7.94v4.68h-5.17v-4.15c0-.99-.02-2.26-1.38-2.26-1.38 0-1.59 1.08-1.59 2.19v4.22H9.34V9.98z"/>
+</svg>
+</a>
 
-    <a class="btn" href="cv.pdf" style="margin-left:10px;" download aria-label="Download CV">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 3v10.17l3.59-3.58L17 11l-5 5-5-5 1.41-1.41L11 13.17V3h1zM5 19h14v2H5v-2z"/>
-      </svg>
-    </a>
-  </p>
+
+<a class="btn" href="https://wa.me/265882870849" target="_blank" aria-label="WhatsApp" style="margin-left:10px;">
+<svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<path d="M16 2.67C8.64 2.67 2.67 8.64 2.67 16c0 2.35.61 4.55 1.68 6.47L2 30l7.71-2.02A13.2 13.2 0 0 0 16 29.33C23.36 29.33 29.33 23.36 29.33 16S23.36 2.67 16 2.67zm0 24.13c-2.03 0-3.92-.55-5.55-1.5l-.4-.23-4.58 1.2 1.22-4.46-.26-.43a10.8 10.8 0 0 1-1.63-5.78c0-6.01 4.89-10.9 10.9-10.9 6.01 0 10.9 4.89 10.9 10.9 0 6.01-4.89 10.9-10.9 10.9zm6.01-8.18c-.33-.16-1.96-.97-2.27-1.08-.31-.12-.54-.16-.77.16-.23.33-.88 1.08-1.08 1.31-.2.23-.39.26-.72.1-.33-.16-1.4-.52-2.67-1.65-.99-.88-1.66-1.96-1.86-2.29-.2-.33-.02-.51.14-.67.14-.14.33-.39.49-.59.16-.2.2-.33.33-.55.12-.23.06-.43-.03-.59-.1-.16-.77-1.86-1.06-2.55-.28-.67-.56-.58-.77-.59h-.66c-.23 0-.59.08-.9.43-.31.33-1.18 1.15-1.18 2.81s1.21 3.26 1.38 3.49c.16.23 2.38 3.63 5.77 5.09.81.35 1.44.56 1.93.72.81.26 1.55.22 2.13.14.65-.1 1.96-.8 2.24-1.57.28-.77.28-1.43.2-1.57-.08-.14-.31-.23-.64-.39z"/>
+</svg>
+</a>
+
+
+<a class="btn" href="cv.pdf" style="margin-left:10px;" download aria-label="Download CV">
+<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+<path d="M12 3v10.17l3.59-3.58L17 11l-5 5-5-5 1.41-1.41L11 13.17V3h1zM5 19h14v2H5v-2z"/>
+</svg>
+</a>
+</p>
 </section>
 
 <footer>
@@ -320,3 +323,4 @@
 
 </body>
 </html>
+
