--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     /* Sections */
     section {
-      padding: 40px 20px; /* reduced vertical spacing */
+      padding: 25px 15px; /* reduced vertical spacing */
       max-width: 1100px;
       margin: auto;
       animation: fadeUp 1s ease forwards;
@@ -177,7 +177,9 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 25px;
     }
-
+    #contact {
+      text-align: center;
+    }
     /* Footer */
     footer {
       background: var(--dark);
@@ -323,4 +325,5 @@
 
 </body>
 </html>
+
 
